--- a/main.css
+++ b/main.css
@@ -112,10 +112,10 @@
 .ring-mail {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
 
-  width: 82%;
+  width: 100%;
   margin: 0 auto;
 }
 .send {
@@ -128,7 +128,10 @@
 form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 21em;
+
 }
 label,
 button {
